# criware-utf

./: Cargo.toml  README.md  README.tpl
criware-utf/: Cargo.toml
criware-utf-core/: Cargo.toml  README.md
criware-utf-core/src/: debug.rs  lib.rs  packet.rs  reader.rs  schema.rs  table.rs  value.rs  writer.rs
criware-utf-core/src/packet/: cri_encryption.rs
criware-utf-derive/: Cargo.toml
criware-utf-derive/src/: utf_table.rs  utils.rs
criware-utf-derive/src/utf_table/: field_attr.rs  impls.rs  main_attr.rs  structs.rs
criware-utf-macros/: Cargo.toml  README.md
criware-utf-macros/src/: lib.rs  utf_table.rs
criware-utf-macros/src/utf_table/: impls.rs  main_attr.rs
criware-utf/src/: lib.rs
