[package]
name = "criware-utf-core"
description = "Core components for parsing/writing UTF tables in CRIWARE CPK files"
version.workspace = true
license.workspace = true
edition = "2024"
readme = "README.md"
documentation = "https://docs.rs/criware-utf"
repository = "https://github.com/ndhaba/criware-utf"

[dependencies]
inventory = "0.3.20"
thiserror = "2.0.14"