[package]
name = "criware-utf-derive"
description = "Procedural macros for parsing/writing UTF tables used in CRIWARE CPK files"
version.workspace = true
license.workspace = true
edition = "2024"

[lib]
proc-macro = true

[dependencies]
criware-utf-core = { version = "0.2.0", path = "../criware-utf-core" }
proc-macro2 = "1.0.96"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["extra-traits"] }
