[package]
name = "criware-utf-macros"
description = "Procedural macros for parsing/writing UTF tables used in CRIWARE CPK files"
version.workspace = true
license.workspace = true
edition = "2024"
documentation = "https://docs.rs/criware-utf"
repository = "https://github.com/ndhaba/criware-utf"

[lib]
proc-macro = true

[dependencies]
criware-utf-core = { version = "1.0.0", path = "../criware-utf-core" }
proc-macro2 = "1.0.96"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["extra-traits"] }

[lints]
workspace = true
