[package]
name = "criware-utf"
description.workspace = true
version.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
criware-utf-core = { version = "0.2.0", path = "../criware-utf-core" }
criware-utf-macros = { version = "0.2.0", path = "../criware-utf-macros" }

[lints]
workspace = true
