[package]
name = "criware-utf"
description.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
edition = "2024"
repository = "https://github.com/ndhaba/criware-utf"

[dependencies]
criware-utf-core = { version = "1.1.0", path = "../criware-utf-core" }
criware-utf-macros = { version = "1.1.0", path = "../criware-utf-macros" }